Fix overlapping days in the schedule

--- a/style/style.css
+++ b/style/style.css
@@ -199,7 +199,6 @@ html, body {
     background-color: rgba(255, 255, 255, 0.6);
     padding: 28px 14px 28px 14px;
     border-radius: 1px;
-    width: 300px;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.08);
     -webkit-transition: 0.1s ease-in-out;
     -moz-transition: 0.1s ease-in-out;
